Flexible autoencoder ready.

--- a/autoencoder.ipynb
+++ b/autoencoder.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 113,
    "id": "9ec97da6-acf4-4a3d-a245-1f33872a9118",
    "metadata": {
     "tags": []
@@ -185,14 +185,21 @@
     "\n",
     "        self.layer_in = nn.Linear( input_dim, hidden_dim)\n",
     "        self.hidden = list()\n",
+    "\n",
+    "        ## encoder with decreasing number of nodes in hidden layers (n/2)\n",
     "        if type == 'decr':\n",
     "            i=0\n",
     "            while ((i < nb_hidden) and (hidden_dim/2 > latent_dim)):\n",
-    "                self.layer = nn.Linear(hidden_dim, int(round(hidden_dim/2)))\n",
-    "                self.hidden.append(self.layer)\n",
+    "                layer = nn.Linear(hidden_dim, int(round(hidden_dim/2)))\n",
+    "                self.hidden.append(layer)\n",
     "                hidden_dim = int(round(hidden_dim/2))\n",
     "                i += 1\n",
-    "        # if type == 'straight':\n",
+    "\n",
+    "        ## encoder with the same number of nodes in hidden layer\n",
+    "        if type == 'straight':\n",
+    "            for i in range(nb_hidden):\n",
+    "                layer = nn.Linear(hidden_dim, hidden_dim)\n",
+    "                self.hidden.append(layer)\n",
     "\n",
     "        self.layer_out = nn.Linear(hidden_dim, latent_dim)\n",
     "        \n",
@@ -249,18 +256,28 @@
     "    \"\"\"\n",
     "    Decoder network.\n",
     "    \"\"\"\n",
-    "    def __init__(self, latent_dim, hidden_dim, output_dim, nb_hidden = 1):\n",
+    "    def __init__(self, latent_dim, hidden_dim, output_dim, nb_hidden = 1, type = 'straight'):\n",
     "        super(Decoder, self).__init__()\n",
     "\n",
     "        self.hidden = list()\n",
-    "        i = nb_hidden\n",
-    "        n = hidden_dim/(2**(nb_hidden))\n",
-    "        self.layer_in = nn.Linear( latent_dim,int(round(n)))\n",
-    "        while ((i > 0) and (n <= hidden_dim)):\n",
-    "            self.layer = nn.Linear(int(round(n)), int(round(n*2)))\n",
-    "            self.hidden.append(self.layer)\n",
-    "            i -= 1\n",
-    "            n = n*2        \n",
+    "        ## encoder with decreasing number of nodes in hidden layers (n/2)\n",
+    "        if type == 'decr':\n",
+    "            i = nb_hidden\n",
+    "            n = hidden_dim/(2**(nb_hidden))\n",
+    "            self.layer_in = nn.Linear( latent_dim,int(round(n)))\n",
+    "            while ((i > 0) and (n <= hidden_dim)):\n",
+    "                layer = nn.Linear(int(round(n)), int(round(n*2)))\n",
+    "                self.hidden.append(layer)\n",
+    "                i -= 1\n",
+    "                n = n*2        \n",
+    "\n",
+    "        ## encoder with the same number of nodes in hidden layer\n",
+    "        if type == 'straight':\n",
+    "            self.layer_in = nn.Linear( latent_dim,hidden_dim)\n",
+    "            for i in range(nb_hidden):\n",
+    "                layer = nn.Linear(hidden_dim, hidden_dim)\n",
+    "                self.hidden.append(layer)\n",
+    "\n",
     "        self.layer_out = nn.Linear(hidden_dim, output_dim)\n",
     "        \n",
     "        self.LeakyReLU = nn.LeakyReLU(0.2)\n",
@@ -467,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,6 +498,7 @@
     "latent_dim = 10\n",
     "output_dim = input_dim\n",
     "nb_hidden = 2\n",
+    "type = 'decr'\n",
     "\n",
     "## Set up training hyperparams\n",
     "batch_size = 100\n",
@@ -490,50 +508,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 120,
    "id": "73865457-77ff-4d9f-9f49-a5b8bd30de4a",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Encoder\n",
-      "-------\n",
-      "# hidden layers: 2\n",
-      "\n",
-      "input layer:  468 300\n",
-      "hidden layer: 300 150\n",
-      "hidden layer: 150 75\n",
-      "output layer: 75 10\n",
-      "\n",
-      "\n",
-      "Decoder\n",
-      "-------\n",
-      "# hidden layers: 2\n",
-      "\n",
-      "input layer:  10 75\n",
-      "hidden layer: 75 150\n",
-      "hidden layer: 150 300\n",
-      "output layer: 300 468\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Build model\n",
     "\n",
-    "encoder = Encoder( input_dim, hidden_dim, latent_dim, nb_hidden=nb_hidden)\n",
+    "encoder = Encoder( input_dim, hidden_dim, latent_dim, nb_hidden=nb_hidden, type = type)\n",
     "encoder.set_name('Encoder')\n",
-    "decoder = Decoder(latent_dim, hidden_dim, output_dim, nb_hidden=nb_hidden)\n",
+    "decoder = Decoder(latent_dim, hidden_dim, output_dim, nb_hidden=nb_hidden, type = type)\n",
     "decoder.set_name('Decoder')\n",
     "model = Autoencoder(Encoder=encoder, Decoder=decoder).to(DEVICE)        # GPU/TPU/... --> XPU\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +534,6 @@
      "output_type": "stream",
      "text": [
       "Encoder:\n",
-      "\n",
       "       # | nodes | parameters\n",
       "-----------------------------------\n",
       "   input |   468 |     140700\n",
@@ -552,7 +544,6 @@
       "-----------------------------------\n",
       "         |       |     197935\n",
       "Decoder:\n",
-      "\n",
       "       # | nodes | parameters\n",
       "-----------------------------------\n",
       "   input |    10 |        825\n",
@@ -567,7 +558,7 @@
    ],
    "source": [
     "print_overview(encoder)\n",
-    "print_overview(decoder)\n"
+    "print_overview(decoder)"
    ]
   },
   {
