--- a/autoencoder.ipynb
+++ b/autoencoder.ipynb
@@ -25,6 +25,7 @@
     "import matplotlib        as mpl\n",
     "import os\n",
     "import pandas as pd\n",
+    "import sys\n",
     "\n",
     "import torch\n",
     "import torch.nn          as nn\n",
@@ -35,7 +36,10 @@
     "from matplotlib          import rcParams, rc\n",
     "rcParams.update({'figure.dpi': 200})\n",
     "mpl.rcParams.update({'font.size': 8})\n",
-    "plt.rcParams['figure.dpi'] = 150"
+    "plt.rcParams['figure.dpi'] = 150\n",
+    "\n",
+    "## imports own scripts\n",
+    "sys.path.insert(1, '/lhome/silkem/MACE/MACE/src/mace')\n"
    ]
   },
   {
@@ -810,7 +814,7 @@
     }
    ],
    "source": [
-    "plot_compare(x_test,x_test_hat, ['H2O'])\n"
+    "plot_compare(x_test,x_test_hat, molecs, ['H2O'])\n"
    ]
   },
   {
