back to previous version

--- a/autoencoder.ipynb
+++ b/autoencoder.ipynb
@@ -36,10 +36,7 @@
     "from matplotlib          import rcParams, rc\n",
     "rcParams.update({'figure.dpi': 200})\n",
     "mpl.rcParams.update({'font.size': 8})\n",
-    "plt.rcParams['figure.dpi'] = 150\n",
-    "\n",
-    "## imports own scripts\n",
-    "sys.path.insert(1, '/lhome/silkem/MACE/MACE/src/mace')\n"
+    "plt.rcParams['figure.dpi'] = 150"
    ]
   },
   {
@@ -814,7 +811,7 @@
     }
    ],
    "source": [
-    "plot_compare(x_test,x_test_hat, molecs, ['H2O'])\n"
+    "plot_compare(x_test,x_test_hat, ['H2O'])\n"
    ]
   },
   {
