Last small changes

--- a/mace-ae-dev.ipynb
+++ b/mace-ae-dev.ipynb
@@ -135,37 +135,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overview Model 1:\n",
-      "___________________________________\n",
-      "\n",
-      "Encoder 1:\n",
-      "       # | nodes | parameters\n",
-      "-----------------------------------\n",
-      "   input |   468 |     140700\n",
-      "  hidden |   300 |      90300\n",
-      "  hidden |   300 |      90300\n",
-      "  hidden |   300 |       3010\n",
-      "  output |    10 |          /\n",
-      "-----------------------------------\n",
-      "         |       |     324310\n",
-      "\n",
-      "Decoder 1:\n",
-      "       # | nodes | parameters\n",
-      "-----------------------------------\n",
-      "   input |    10 |       3300\n",
-      "  hidden |   300 |      90300\n",
-      "  hidden |   300 |      90300\n",
-      "  hidden |   300 |     140868\n",
-      "  output |   468 |          /\n",
-      "-----------------------------------\n",
-      "         |       |     324768\n"
+     "ename": "NameError",
+     "evalue": "name 'train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m lr \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1e-3\u001b[39m                   \u001b[38;5;66;03m## learning rate\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m## Set up architecture hyperparams\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m input_dim  \u001b[38;5;241m=\u001b[39m \u001b[43mtrain\u001b[49m\u001b[38;5;241m.\u001b[39mdf\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m      6\u001b[0m hidden_dim \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m300\u001b[39m\n\u001b[1;32m      7\u001b[0m latent_dim \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'train' is not defined"
      ]
     }
    ],
@@ -179,7 +160,7 @@
     "latent_dim = 10\n",
     "output_dim = input_dim\n",
     "nb_hidden = 2\n",
-    "type = 'straight'\n",
+    "type = 'decr'\n",
     "\n",
     "## Build model\n",
     "model = ae.build(input_dim, hidden_dim, latent_dim,output_dim, nb_hidden, type, DEVICE)\n",
