--- a/ODEs-to-python.ipynb
+++ b/ODEs-to-python.ipynb
@@ -10,6 +10,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -22,18 +29,63 @@
     "        lines[i]=lines[i].replace('\\n', '')\n",
     "    return lines\n",
     "\n",
+    "'''\n",
+    "Read fortran ODEs and prep for translation.\n",
+    "    - file = file name\n",
+    "    - returns: dict\n",
+    "'''\n",
+    "def read_fortran_ODEs(file):\n",
     "\n",
+    "    ## read fortran ODEs from given file\n",
+    "    with open(file, 'r') as f:\n",
+    "        lines = f.readlines()\n",
+    "\n",
+    "    ## select non-conserved species\n",
+    "    spec_lines = lines[123:]\n",
+    "\n",
+    "    ## remove unnecessary fortran code\n",
+    "    spec_lines = prep_lines(spec_lines)\n",
+    "\n",
+    "    ## make dict:\n",
+    "    ##      - entry per spec\n",
+    "    ##      - stick together separate fortran strings\n",
+    "    ODEs = dict()\n",
+    "\n",
+    "    for i, line in enumerate(spec_lines):\n",
+    "        if len(line) != 0 and line[0] == 'C':\n",
+    "            ODEs[line[2:]] = str('')\n",
+    "            print('i=',i, end = '\\r')\n",
+    "            start = i + 1\n",
+    "\n",
+    "            for j in range(start,start+1000):\n",
+    "                if j >= len(spec_lines):\n",
+    "                    break\n",
+    "                if len(spec_lines[j]) != 0 and spec_lines[j][0] == 'C':\n",
+    "                    stop = j\n",
+    "                    break\n",
+    "                \n",
+    "            for j in range(i+1,stop):\n",
+    "                ODEs[line[2:]] += spec_lines[j]\n",
+    "\n",
+    "            i = stop +1\n",
+    "\n",
+    "    del ODEs['']\n",
+    "\n",
+    "    return ODEs\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "Translate fortran ODE to python ODE\n",
+    "'''\n",
     "def fortran_to_python(ODEs, spec):\n",
     "    print(spec)\n",
     "\n",
-    "    # print('type1',type(ODEs[spec]))\n",
     "    if isinstance(ODEs[spec],str):\n",
     "        ## NOT fractional abundances, but in units of cm^-3\n",
     "        ODEs[spec] = ODEs[spec].replace('*HNR', '')\n",
     "        ## split string\n",
     "        ODEs[spec] = ODEs[spec].split(' ')\n",
     "\n",
-    "    # print('type2',type(ODEs[spec]))\n",
     "    ## remove empty strings\n",
     "    to_remove = ''\n",
     "    while to_remove in ODEs[spec]:\n",
@@ -45,7 +97,6 @@
     "    while 'RETURN' in ODEs[spec]:\n",
     "        ODEs[spec].remove('RETURN')\n",
     "    \n",
-    "\n",
     "    ## replace brackets: ( --> [\n",
     "    for i in range(len(ODEs[spec])):\n",
     "        # print(i,ODEs[spec][i][0])\n",
@@ -70,97 +121,19 @@
     "    ODEs[spec][-1] = 'YDOT['+nb+']=F-(D*Y['+nb+'])'\n",
     "\n",
     "    return ODEs\n",
-    "\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Read in file & prep"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "list"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "file = '/lhome/silkem/CHEM/src-IP-AP-HNR/code/acodes.f'\n",
-    "\n",
-    "\n",
-    "with open(file, 'r') as f:\n",
-    "    lines = f.readlines()\n",
-    "\n",
-    "type(lines)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(10519,)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.shape(lines)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "spec_lines = lines[123:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "spec_lines = prep_lines(spec_lines)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'*Y(17)*Y(17)*HNR+K(5224)*Y(17)*Y(88)*HNR+K(5225)*Y(17)*Y(88)*HNR+'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "spec_lines[583]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -172,69 +145,17 @@
     }
    ],
    "source": [
-    "ODEs = dict()\n",
+    "file = '/lhome/silkem/CHEM/src-IP-AP-HNR/code/acodes.f'\n",
     "\n",
-    "for i, line in enumerate(spec_lines):\n",
-    "    if len(line) != 0 and line[0] == 'C':\n",
-    "        ODEs[line[2:]] = str('')\n",
-    "        print('i=',i, end = '\\r')\n",
-    "        start = i + 1\n",
+    "with open(file, 'r') as f:\n",
+    "    lines = f.readlines()\n",
     "\n",
-    "        for j in range(start,start+1000):\n",
-    "            if j >= len(spec_lines):\n",
-    "                break\n",
-    "            if len(spec_lines[j]) != 0 and spec_lines[j][0] == 'C':\n",
-    "                # print(j, spec_lines[j])\n",
-    "                stop = j\n",
-    "                break\n",
-    "            \n",
-    "        for j in range(i+1,stop):\n",
-    "            ODEs[line[2:]] += spec_lines[j]\n",
-    "\n",
-    "        i = stop +1\n",
-    "\n",
-    "\n"
+    "ODEs = read_fortran_ODEs(file)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "count= 1\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "count = 0\n",
-    "for key in ODEs:\n",
-    "    if key == '':\n",
-    "        # del ODEs[key]\n",
-    "        count += 1\n",
-    "print('count=',count)\n",
-    "\n",
-    "del ODEs['']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for key in ODEs:\n",
-    "    if  key == '':\n",
-    "        print(key)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +164,7 @@
        "'      F=0.+K(1517)*Y(10)*Y(458)*HNR+K(1518)*Y(10)*Y(455)*HNR+K(2066)*Y(11)*Y(453)*HNR+K(2068)*Y(11)*Y(459)*HNR+K(5727)*Y(465)+K(6042)*Y(10)*Y(451)*HNR+K(6202)*Y(465)+K(6538)*Y(465)      D=0.+K(994)*X(1)*HNR+K(995)*X(1)*HNR+K(996)*X(1)*HNR+K(997)*X(1)*HNR      YDOT(466)=F-(D*Y(466))      RETURN      END'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,25 +174,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C11+\n"
-     ]
-    }
-   ],
    "source": [
-    "ODEs = fortran_to_python(ODEs, 'C11+')"
+    "### Translate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -754,34 +665,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['F=0.+K[4]*Y[9]*Y[214]+K[4]*Y[9]*Y[214]+K[9]*Y[9]*Y[28]+K[57]*Y[11]*Y[26]+K[130]*Y[28]*Y[272]+K[131]*Y[28]*Y[385]+K[209]*Y[51]*Y[73]+K[242]*Y[54]*Y[73]+K[246]*Y[11]*Y[73]+K[261]*Y[17]*Y[73]+K[285]*Y[29]*Y[73]+K[289]*Y[14]*Y[73]+K[307]*Y[73]*Y[214]+K[308]*Y[73]*Y[89]+K[309]*Y[73]*Y[127]+K[310]*Y[73]*Y[77]+K[311]*Y[73]*Y[88]+K[312]*Y[73]*Y[104]+K[313]*Y[73]*Y[107]+K[478]*Y[37]*Y[73]+K[488]*Y[1]*Y[73]+K[497]*Y[60]*Y[73]+K[587]*Y[27]*Y[73]+K[602]*Y[35]*Y[73]+K[617]*Y[20]*Y[73]+K[682]*Y[28]*Y[73]+K[699]*Y[31]*Y[73]+K[764]*Y[154]+K[774]*Y[280]+K[841]*Y[178]+K[858]*Y[207]+K[864]*Y[320]+K[875]*Y[214]+K[886]*Y[89]',\n",
-       " 'F=F+K[906]*Y[77]+K[918]*Y[180]+K[953]*Y[331]+K[1038]*Y[156]*X[1]',\n",
-       " 'F=F+K[1050]*Y[299]*X[1]+K[1068]*Y[288]*X[1]+K[1172]*Y[175]*X[1]+K[1194]*Y[215]*X[1]+K[1201]*Y[192]*X[1]+K[1203]*Y[319]*X[1]+K[1233]*Y[201]*X[1]+K[1234]*Y[334]*X[1]+K[1249]*Y[91]*X[1]+K[1250]*Y[91]*X[1]+K[1261]*Y[212]*X[1]+K[1288]*Y[97]*X[1]+K[1309]*Y[164]*X[1]+K[1310]*Y[164]*X[1]+K[1349]*Y[79]*X[1]+K[1351]*Y[223]*X[1]+K[1352]*Y[223]*X[1]+K[1368]*Y[182]*X[1]+K[1377]*Y[83]*X[1]+K[1423]*Y[177]*X[1]+K[1426]*Y[327]*X[1]+K[1533]*Y[10]*Y[280]+K[1607]*Y[10]*Y[214]+K[1610]*Y[10]*Y[89]+K[1628]*Y[10]*Y[77]+K[1643]*Y[10]*Y[104]+K[1645]*Y[10]*Y[331]+K[1647]*Y[10]*Y[349]+K[1649]*Y[10]*Y[258]+K[1667]*Y[10]*Y[208]+K[1670]*Y[9]*Y[104]+K[1674]*Y[48]*Y[77]+K[1675]*Y[48]*Y[104]+K[1679]*Y[51]*Y[79]+K[1682]*Y[51]*Y[111]+K[1685]*Y[51]*Y[206]+K[1688]*Y[53]*Y[214]+K[1697]*Y[53]*Y[77]+K[1744]*Y[57]*Y[77]+K[1786]*Y[56]*Y[79]+K[1864]*Y[61]*Y[79]+K[1928]*Y[74]*Y[79]+K[1966]*Y[54]*Y[79]+K[1973]*Y[139]*Y[214]+K[1978]*Y[139]*Y[331]+K[2124]*Y[11]*Y[79]+K[2152]*Y[11]*Y[206]+K[2166]*Y[13]*Y[214]+K[2168]*Y[13]*Y[89]+K[2179]*Y[13]*Y[77]+K[2190]*Y[13]*Y[331]+K[2198]*Y[15]*Y[214]+K[2207]*Y[15]*Y[77]+K[2212]*Y[15]*Y[331]+K[2228]*Y[17]*Y[79]+K[2302]*Y[22]*Y[77]+K[2312]*Y[22]*Y[331]+K[2473]*Y[14]*Y[79]+K[2490]*Y[59]*Y[214]+K[2493]*Y[59]*Y[77]+K[2495]*Y[59]*Y[104]+K[2565]*Y[2]*Y[77]+K[2568]*Y[2]*Y[180]+K[2576]*Y[2]*Y[331]+K[2609]*Y[4]*Y[77]+K[2712]*Y[89]*Y[247]+K[2720]*Y[89]*Y[116]+K[2733]*Y[38]*Y[77]+K[2748]*Y[37]*Y[139]+K[2753]*Y[37]*Y[343]+K[2767]*Y[37]*Y[79]+K[2884]*Y[5]*Y[320]+K[2919]*Y[5]*Y[234]+K[3078]*Y[63]*Y[77]+K[3097]*Y[60]*Y[79]',\n",
-       " 'F=F+K[3119]*Y[79]*Y[451]+K[3120]*Y[79]*Y[458]+K[3121]*Y[79]*Y[455]+K[3122]*Y[79]*Y[82]+K[3123]*Y[79]*Y[238]+K[3124]*Y[79]*Y[154]+K[3125]*Y[79]*Y[314]+K[3126]*Y[79]*Y[135]+K[3127]*Y[79]*Y[146]+K[3128]*Y[79]*Y[140]+K[3129]*Y[79]*Y[269]+K[3130]*Y[79]*Y[280]+K[3131]*Y[79]*Y[371]+K[3132]*Y[79]*Y[373]+K[3133]*Y[79]*Y[257]+K[3134]*Y[79]*Y[274]+K[3135]*Y[79]*Y[265]+K[3136]*Y[79]*Y[399]+K[3137]*Y[79]*Y[402]+K[3138]*Y[79]*Y[326]+K[3139]*Y[79]*Y[344]+K[3140]*Y[79]*Y[339]+K[3141]*Y[79]*Y[384]+K[3142]*Y[79]*Y[378]+K[3143]*Y[79]*Y[382]+K[3144]*Y[79]*Y[397]+K[3145]*Y[79]*Y[379]+K[3146]*Y[79]*Y[407]+K[3147]*Y[79]*Y[413]+K[3148]*Y[79]*Y[411]+K[3149]*Y[79]*Y[427]+K[3150]*Y[79]*Y[421]+K[3151]*Y[79]*Y[426]+K[3152]*Y[79]*Y[423]+K[3153]*Y[79]*Y[437]+K[3154]*Y[79]*Y[444]+K[3155]*Y[79]*Y[442]+K[3156]*Y[79]*Y[456]+K[3157]*Y[79]*Y[304]+K[3158]*Y[79]*Y[149]+K[3159]*Y[79]*Y[292]+K[3160]*Y[79]*Y[178]+K[3161]*Y[79]*Y[80]+K[3162]*Y[79]*Y[228]+K[3163]*Y[79]*Y[362]+K[3164]*Y[79]*Y[348]+K[3165]*Y[79]*Y[417]+K[3166]*Y[79]*Y[416]+K[3167]*Y[79]*Y[447]+K[3168]*Y[79]*Y[158]+K[3169]*Y[79]*Y[92]+K[3170]*Y[79]*Y[207]+K[3171]*Y[79]*Y[165]+K[3172]*Y[79]*Y[320]+K[3173]*Y[79]*Y[232]+K[3174]*Y[79]*Y[109]+K[3175]*Y[79]*Y[186]+K[3176]*Y[79]*Y[199]+K[3177]*Y[79]*Y[144]+K[3178]*Y[79]*Y[89]+K[3179]*Y[79]*Y[226]+K[3180]*Y[79]*Y[368]+K[3181]*Y[79]*Y[127]+K[3182]*Y[79]*Y[225]+K[3183]*Y[79]*Y[310]+K[3184]*Y[79]*Y[275]+K[3185]*Y[79]*Y[270]+K[3186]*Y[79]*Y[388]+K[3187]*Y[79]*Y[430]+K[3188]*Y[79]*Y[462]+K[3189]*Y[79]*Y[77]+K[3190]*Y[79]*Y[325]+K[3191]*Y[79]*Y[234]',\n",
-       " 'F=F+K[3192]*Y[79]*Y[205]+K[3193]*Y[79]*Y[161]+K[3194]*Y[79]*Y[191]+K[3195]*Y[79]*Y[256]+K[3196]*Y[79]*Y[357]+K[3197]*Y[79]*Y[120]+K[3198]*Y[79]*Y[211]+K[3199]*Y[79]*Y[284]+K[3200]*Y[79]*Y[169]+K[3201]*Y[79]*Y[227]+K[3202]*Y[79]*Y[331]+K[3203]*Y[79]*Y[96]+K[3204]*Y[79]*Y[122]+K[3205]*Y[79]*Y[106]+K[3206]*Y[79]*Y[219]+K[3207]*Y[79]*Y[251]+K[3208]*Y[79]*Y[350]+K[3209]*Y[79]*Y[107]+K[3210]*Y[79]*Y[258]+K[3211]*Y[79]*Y[282]+K[3212]*Y[79]*Y[300]+K[3213]*Y[79]*Y[291]+K[3214]*Y[79]*Y[354]+K[3215]*Y[79]*Y[363]+K[3216]*Y[79]*Y[393]+K[3217]*Y[79]*Y[151]+K[3218]*Y[79]*Y[173]+K[3219]*Y[79]*Y[194]+K[3220]*Y[79]*Y[86]+K[3221]*Y[79]*Y[105]+K[3222]*Y[79]*Y[81]+K[3223]*Y[79]*Y[302]+K[3224]*Y[79]*Y[328]+K[3225]*Y[79]*Y[208]+K[3226]*Y[79]*Y[332]+K[3227]*Y[77]*Y[91]+K[3230]*Y[77]*Y[111]+K[3232]*Y[77]*Y[116]+K[3249]*Y[279]*Y[79]+K[3261]*Y[64]*Y[79]+K[3310]*Y[7]*Y[154]+K[3320]*Y[7]*Y[280]+K[3392]*Y[7]*Y[178]+K[3428]*Y[7]*Y[214]+K[3470]*Y[7]*Y[77]+K[3515]*Y[7]*Y[331]+K[3570]*Y[16]*Y[77]+K[3580]*Y[16]*Y[331]+K[3584]*Y[70]*Y[77]+K[3585]*Y[70]*Y[331]+K[3703]*Y[21]*Y[214]+K[3762]*Y[27]*Y[79]+K[3772]*Y[34]*Y[77]+K[3804]*Y[35]*Y[79]+K[3834]*Y[20]*Y[79]+K[3846]*Y[88]*Y[139]+K[3860]*Y[23]*Y[214]+K[3866]*Y[23]*Y[77]+K[3875]*Y[111]*Y[56]+K[3879]*Y[111]*Y[170]+K[3882]*Y[111]*Y[170]+K[3890]*Y[104]*Y[139]+K[3898]*Y[28]*Y[450]+K[3900]*Y[28]*Y[453]+K[3901]*Y[28]*Y[454]+K[3905]*Y[28]*Y[47]+K[3907]*Y[28]*Y[52]+K[3913]*Y[28]*Y[134]+K[3914]*Y[28]*Y[138]+K[3918]*Y[28]*Y[254]+K[3920]*Y[28]*Y[266]+K[3921]*Y[28]*Y[268]+K[3923]*Y[28]*Y[329]+K[3925]*Y[28]*Y[341]+K[3928]*Y[28]*Y[376]+K[3929]*Y[28]*Y[381]+K[3932]*Y[28]*Y[408]+K[3934]*Y[28]*Y[409]+K[3937]*Y[28]*Y[420]+K[3938]*Y[28]*Y[425]+K[3941]*Y[28]*Y[439]+K[3943]*Y[28]*Y[441]+K[3950]*Y[28]*Y[201]+K[3951]*Y[28]*Y[179]+K[3957]*Y[28]*Y[213]+K[3982]*Y[28]*Y[301]+K[4002]*Y[32]*Y[77]+K[4021]*Y[31]*Y[79]+K[4031]*Y[95]*Y[214]+K[4053]*Y[116]*Y[331]+K[4064]*Y[260]*Y[56]+K[4076]*Y[260]*Y[170]+K[4091]*Y[67]*Y[331]+K[4101]*Y[71]*Y[79]+K[4124]*Y[9]*Y[79]+K[4159]*Y[450]*Y[79]+K[4194]*Y[454]*Y[79]+K[4229]*Y[47]*Y[79]+K[4264]*Y[52]*Y[79]+K[4299]*Y[134]*Y[79]+K[4334]*Y[138]*Y[79]+K[4369]*Y[272]*Y[79]+K[4404]*Y[254]*Y[79]+K[4439]*Y[266]*Y[79]+K[4474]*Y[329]*Y[79]+K[4509]*Y[341]*Y[79]+K[4544]*Y[385]*Y[79]+K[4579]*Y[376]*Y[79]+K[4614]*Y[381]*Y[79]+K[4649]*Y[408]*Y[79]+K[4684]*Y[409]*Y[79]+K[4719]*Y[420]*Y[79]+K[4754]*Y[425]*Y[79]+K[4789]*Y[439]*Y[79]+K[4824]*Y[441]*Y[79]+K[4859]*Y[12]*Y[79]+K[4894]*Y[58]*Y[79]+K[4930]*Y[3]*Y[79]+K[4965]*Y[26]*Y[79]+K[5000]*Y[113]*Y[79]+K[5035]*Y[30]*Y[79]+K[5070]*Y[112]*Y[79]+K[5094]*Y[51]*Y[104]+K[5094]*Y[51]*Y[104]+K[5095]*Y[51]*Y[331]+K[5098]*Y[56]*Y[88]',\n",
-       " 'F=F+K[5122]*Y[54]*Y[104]+K[5123]*Y[54]*Y[331]+K[5136]*Y[11]*Y[154]+K[5140]*Y[11]*Y[280]+K[5181]*Y[11]*Y[77]+K[5182]*Y[11]*Y[256]+K[5193]*Y[11]*Y[88]+K[5196]*Y[11]*Y[104]+K[5197]*Y[11]*Y[176]+K[5198]*Y[11]*Y[331]+K[5199]*Y[11]*Y[31]+K[5203]*Y[11]*Y[349]+K[5205]*Y[11]*Y[258]+K[5218]*Y[17]*Y[77]+K[5228]*Y[17]*Y[104]+K[5231]*Y[17]*Y[28]+K[5232]*Y[17]*Y[28]+K[5252]*Y[19]*Y[77]+K[5262]*Y[19]*Y[28]+K[5293]*Y[14]*Y[214]+K[5295]*Y[14]*Y[77]+K[5305]*Y[14]*Y[104]+K[5306]*Y[14]*Y[104]+K[5310]*Y[14]*Y[28]+K[5312]*Y[14]*Y[331]+K[5316]*Y[14]*Y[258]+K[5331]*Y[55]*Y[77]+K[5335]*Y[55]*Y[88]+K[5337]*Y[55]*Y[104]+K[5371]*Y[1]*Y[178]+K[5376]*Y[1]*Y[214]+K[5385]*Y[1]*Y[77]+K[5409]*Y[1]*Y[176]+K[5411]*Y[1]*Y[331]+K[5417]*Y[185]*Y[28]+K[5418]*Y[77]*Y[77]+K[5418]*Y[77]*Y[77]+K[5419]*Y[77]*Y[77]+K[5421]*Y[77]*Y[88]+K[5423]*Y[77]*Y[104]+K[5428]*Y[180]*Y[11]+K[5429]*Y[190]*Y[11]+K[5444]*Y[18]*Y[154]+K[5475]*Y[18]*Y[214]+K[5478]*Y[18]*Y[77]+K[5544]*Y[88]*Y[176]+K[5548]*Y[104]*Y[176]+K[5552]*Y[28]*Y[451]+K[5553]*Y[28]*Y[455]+K[5554]*Y[28]*Y[465]+K[5555]*Y[28]*Y[51]+K[5556]*Y[28]*Y[56]+K[5564]*Y[28]*Y[54]',\n",
-       " 'F=F+K[5565]*Y[28]*Y[141]+K[5566]*Y[28]*Y[154]+K[5566]*Y[28]*Y[154]+K[5567]*Y[28]*Y[314]+K[5568]*Y[28]*Y[135]+K[5569]*Y[28]*Y[140]+K[5570]*Y[28]*Y[269]+K[5571]*Y[28]*Y[280]+K[5572]*Y[28]*Y[371]+K[5573]*Y[28]*Y[257]+K[5574]*Y[28]*Y[265]+K[5575]*Y[28]*Y[345]+K[5576]*Y[28]*Y[399]',\n",
-       " 'F=F+K[5577]*Y[28]*Y[326]+K[5578]*Y[28]*Y[339]+K[5579]*Y[28]*Y[384]+K[5580]*Y[28]*Y[378]+K[5581]*Y[28]*Y[379]+K[5582]*Y[28]*Y[407]+K[5583]*Y[28]*Y[411]+K[5585]*Y[28]*Y[421]+K[5586]*Y[28]*Y[423]+K[5587]*Y[28]*Y[437]+K[5588]*Y[28]*Y[442]+K[5590]*Y[28]*Y[304]+K[5591]*Y[28]*Y[244]',\n",
-       " 'F=F+K[5594]*Y[28]*Y[152]+K[5596]*Y[28]*Y[228]+K[5598]*Y[28]*Y[55]+K[5600]*Y[28]*Y[174]+K[5601]*Y[28]*Y[214]+K[5602]*Y[28]*Y[186]+K[5603]*Y[28]*Y[199]+K[5606]*Y[28]*Y[144]+K[5612]*Y[28]*Y[310]+K[5614]*Y[28]*Y[60]+K[5617]*Y[28]*Y[77]+K[5618]*Y[28]*Y[205]+K[5619]*Y[28]*Y[220]+K[5639]*Y[28]*Y[176]+K[5642]*Y[28]*Y[331]+K[5651]*Y[28]*Y[282]+K[5652]*Y[28]*Y[354]+K[5653]*Y[28]*Y[393]+K[5654]*Y[28]*Y[151]+K[5663]*Y[28]*Y[302]+K[5666]*Y[31]*Y[56]+K[5673]*Y[31]*Y[199]+K[5681]*Y[31]*Y[60]+K[5682]*Y[31]*Y[77]+K[5696]*Y[107]*Y[154]+K[5698]*Y[107]*Y[77]+K[5702]*Y[71]*Y[214]+K[5756]*Y[154]+K[5765]*Y[280]+K[5850]*Y[178]',\n",
-       " 'F=F+K[5869]*Y[207]+K[5874]*Y[320]+K[5893]*Y[214]+K[5907]*Y[89]+K[5908]*Y[89]+K[5938]*Y[77]+K[5952]*Y[180]+K[5994]*Y[331]+K[6073]*Y[11]*Y[28]+K[6231]*Y[154]+K[6240]*Y[280]+K[6325]*Y[178]+K[6344]*Y[207]+K[6349]*Y[320]+K[6368]*Y[214]+K[6382]*Y[89]+K[6383]*Y[89]+K[6413]*Y[77]+K[6427]*Y[180]+K[6469]*Y[331]+K[6567]*Y[154]+K[6576]*Y[280]+K[6661]*Y[178]+K[6680]*Y[207]+K[6685]*Y[320]+K[6704]*Y[214]+K[6718]*Y[89]+K[6719]*Y[89]+K[6749]*Y[77]+K[6763]*Y[180]+K[6805]*Y[331]',\n",
-       " 'D=0.+K[66]*Y[112]+K[74]*Y[3]+K[124]*Y[26]+K[299]*Y[59]+K[316]*Y[70]+K[445]*Y[4]+K[549]*Y[16]+K[653]*Y[23]+K[727]+K[876]+K[2360]*Y[25]+K[2444]*Y[33]+K[2503]*Y[163]+K[2504]*Y[137]+K[2505]*Y[223]+K[2506]*Y[98]+K[2507]*Y[189]+K[2508]*Y[84]+K[2509]*Y[123]+K[2510]*Y[356]+K[2511]*Y[110]+K[2512]*Y[206]+K[2603]*Y[4]+K[2727]*Y[38]+K[2895]*Y[5]+K[2896]*Y[5]+K[3074]*Y[63]+K[3431]*Y[7]+K[3564]*Y[16]+K[3705]*Y[21]+K[3706]*Y[21]+K[3997]*Y[32]+K[5175]*Y[11]+K[5341]*Y[100]+K[5342]*Y[211]+K[5343]*Y[231]+K[5344]*Y[104]+K[5345]*Y[118]+K[5377]*Y[1]+K[5672]*Y[31]+K[5703]*Y[71]+K[5894]+K[6054]*Y[57]+K[6060]*Y[62]+K[6082]*Y[22]+K[6092]*Y[33]+K[6369]+K[6705]',\n",
-       " 'YDOT[72]=F-(D*Y[72])']"
+       "['F=0.+K[1517]*Y[10]*Y[458]+K[1518]*Y[10]*Y[455]+K[2066]*Y[11]*Y[453]+K[2068]*Y[11]*Y[459]+K[5727]*Y[465]+K[6042]*Y[10]*Y[451]+K[6202]*Y[465]+K[6538]*Y[465]',\n",
+       " 'D=0.+K[994]*X[1]+K[995]*X[1]+K[996]*X[1]+K[997]*X[1]',\n",
+       " 'YDOT[466]=F-(D*Y[466])']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ODEs['CO']"
+    "ODEs['C11+']"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Write out in as python function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
