--- a/mace-ae-dev.ipynb
+++ b/mace-ae-dev.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.2548, 0.1591])\n"
+     ]
+    }
+   ],
+   "source": [
+    "B = torch.rand(2,2,2)\n",
+    "z = torch.rand(2)\n",
+    "\n",
+    "print(torch.einsum(\"ijk, j, k -> i\",B,z,z))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
