Constructing the Dataset class with the proper data to train emulator.

--- a/mace-ae-dev.ipynb
+++ b/mace-ae-dev.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,22 +41,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0.2548, 0.1591])\n"
+      "[4.49234283e+04 2.49747452e+03 5.92562942e-02 3.64517630e+00\n",
+      " 2.07414140e+03]\n",
+      "[4.49234283e+04 2.49747452e+03 5.92562942e-02 3.64517630e+00]\n"
      ]
     }
    ],
    "source": [
-    "B = torch.rand(2,2,2)\n",
-    "z = torch.rand(2)\n",
+    "outpath = '/STER/silkem/ChemTorch/out/'\n",
+    "dir = '2023-08-31 11:54:16.857153'\n",
     "\n",
-    "print(torch.einsum(\"ijk, j, k -> i\",B,z,z))"
+    "input = np.load(outpath+'new/'+dir+'/input.npy')\n",
+    "p = input[0:-1]\n",
+    "\n",
+    "print(input)\n",
+    "print(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3 4]\n",
+      " [1 2 3 4]\n",
+      " [5 6 7 8]\n",
+      " [5 6 7 8]\n",
+      " [5 6 7 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [[1,2,3,4],[1,2,3,4]]\n",
+    "b = [[5,6,7,8],[5,6,7,8],[5,6,7,8]]\n",
+    "\n",
+    "c = []\n",
+    "c.append(a)\n",
+    "c.append(b)\n",
+    "\n",
+    "d = np.concatenate(c)\n",
+    "\n",
+    "print(d)"
    ]
   },
   {
