--- a/mace-ae-dev.ipynb
+++ b/mace-ae-dev.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,6 +41,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dirs = ds.get_dirs()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -67,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -78,13 +87,19 @@
       " [1 2 3 4]\n",
       " [5 6 7 8]\n",
       " [5 6 7 8]\n",
-      " [5 6 7 8]]\n"
+      " [5 6 7 8]]\n",
+      "[[5 6 7 8]\n",
+      " [5 6 7 8]\n",
+      " [5 6 7 8]]\n",
+      "3\n"
      ]
     }
    ],
    "source": [
     "a = [[1,2,3,4],[1,2,3,4]]\n",
     "b = [[5,6,7,8],[5,6,7,8],[5,6,7,8]]\n",
+    "idx = np.array([0,len(a),len(b)])\n",
+    "i = 2\n",
     "\n",
     "c = []\n",
     "c.append(a)\n",
@@ -92,7 +107,13 @@
     "\n",
     "d = np.concatenate(c)\n",
     "\n",
-    "print(d)"
+    "print(d)\n",
+    "\n",
+    "start = idx[i-1]\n",
+    "stop = start + idx[i]\n",
+    "\n",
+    "print(d[start:stop])\n",
+    "print(len(idx))"
    ]
   },
   {
