Clean up code and add documentation.

--- a/mace-ae-dev.ipynb
+++ b/mace-ae-dev.ipynb
@@ -36,7 +36,7 @@
     "import autoencoder  as ae\n",
     "import dataset      as ds\n",
     "import plotting     as pl\n",
-    "import training     as tr"
+    "import train_1Dchem     as tr"
    ]
   },
   {
